Bug 101588 - Stylus/Pen incorrect -> Dots get Lines
Summary: Stylus/Pen incorrect -> Dots get Lines
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-25 18:44 UTC by jk
Modified: 2017-08-17 05:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Evemu Recording of Dots (253.28 KB, text/plain)
2017-06-25 18:44 UTC, jk
no flags Details
Picture of Result (12.53 KB, image/png)
2017-06-25 18:45 UTC, jk
no flags Details
Evemu Recording of some Math (821.94 KB, text/plain)
2017-06-25 18:46 UTC, jk
no flags Details
Libinput Devices (3.88 KB, text/plain)
2017-06-25 18:47 UTC, jk
no flags Details
evemu dots 2 (318.04 KB, text/plain)
2017-08-13 19:48 UTC, jk
no flags Details

Description jk 2017-06-25 18:44:10 UTC
Created attachment 132236 [details]
Evemu Recording of Dots

Hi,
I'm using 
libinput 1.7.3-1
xf86-input-libinput 0.25.1-1.

Error does not appear when using evdev Driver.

What i do:
Draw Dots in any Drawing Programm (Gimp,Xournal,Krita...)

What should be shown:
Dots.

What is shown, the result:
the first ohne is mostly a Dot, all other are Lines.


What problems do i get else:
When writing something, it's not readable, corrupt because of this bug every time i release the pen and put it back up i get silly lines instead of a clear beginning.
E.G: Something like an X will end up like an X with the under points connected together.
Comment 1 jk 2017-06-25 18:45:48 UTC
Created attachment 132237 [details]
Picture of Result
Comment 2 jk 2017-06-25 18:46:42 UTC
Created attachment 132238 [details]
Evemu Recording of some Math
Comment 3 jk 2017-06-25 18:47:27 UTC
Created attachment 132239 [details]
Libinput Devices
Comment 4 Peter Hutterer 2017-06-26 08:28:00 UTC
https://patchwork.freedesktop.org/patch/163656/
Comment 5 jk 2017-06-26 16:10:50 UTC
Hi,
wow thanks for this quick patch!!
The patch worked really fine.
Everything seems to be as it should, after first tests with patched version.
Thanks!!!!
Comment 6 jk 2017-08-13 19:48:39 UTC
Created attachment 133477 [details]
evemu dots 2

Hi,
after updating System and libinput (not the xorg libinput driver) i got this bug again:
I'm using:
libinput 1.8.1-1
xf86-input-libinput-git 0.25.1.2.r226.gac35749-1 (patched with patches provided here)

Hope you can fix this :)
Thank you! :)
Comment 7 Peter Hutterer 2017-08-17 05:40:10 UTC
commit 6ce3d0249d426e6b3c83e7f86d76bb3145c00a74 
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Jun 26 18:27:10 2017 +1000

    Post a motion event before a tablet button down


Sorry, forgot about that patch. I pushed it to master now and with your recording I cannot reproduce the lines, so I'm closing this as fixed. Not sure why it doesn't work for you but please double check with xf86-input-libinput maste so we can rule out any patch issues. Thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.